# practice

./: .gitignore  CMakeLists.txt  readme.md
Source/: CMakeLists.txt  main.c  main.cpp
Source/leetcode/: CmakeLists.txt
Source/leetcode/include/: leetcode_api.h
Source/leetcode/src/: 13.cpp  1769.cpp
Source/study/algorithm/: algorithm.cpp  algorithm.xmind  readme.md
Source/utility/: CmakeLists.txt
Source/utility/include/: externc.h
cmake/: compile_option.cmake  link_options.cmake
